<GridLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="3"
    android:rowCount="4"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    
    <!-- TITLE -->
	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textColor="#000000"
		android:layout_row="0"
		android:layout_column="0"
		android:layout_columnSpan="3"
		android:textSize="@dimen/activity_title"
		android:id="@+id/ViewEmergencyContactTitle"
		android:text="@string/ViewEmergencyContactTitle"
		/>
	
	<!-- NAME COLUMN -->
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textColor="#000000"
		android:layout_row="1"
		android:layout_column="0"
		android:layout_columnSpan="1"
		android:textSize="@dimen/activity_content"
		android:id="@+id/ViewEmergencyContactNameTag"
		android:text="@string/NameTag"
		/>
	<TextView
	    android:id="@+id/ViewEmergencyContactName"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_column="1"
	    android:layout_columnSpan="2"
	    android:layout_row="1"
	    android:text="@string/NameTag"
	    android:textColor="#000000"
	    android:textSize="@dimen/activity_content" 
	    />
	
	<!-- NUMBER COLUMN -->
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textColor="#000000"
		android:layout_row="2"
		android:layout_column="0"
		android:layout_columnSpan="1"
		android:textSize="@dimen/activity_content"
		android:id="@+id/ViewEmergencyContactNumberTag"
		android:text="@string/NumberTag"
		/>
	<TextView
	    android:id="@+id/ViewEmergencyContactNumber"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_column="1"
	    android:layout_columnSpan="2"
	    android:layout_row="2"
	    android:text="@string/NumberTag"
	    android:textColor="#000000"
	    android:textSize="@dimen/activity_content" 
	    />

	<!-- BUTTONS -->
	<Button
	    android:id="@+id/CallEmergencyContact"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_column="0"
	    android:layout_columnSpan="3"
	    android:layout_gravity="end|bottom"
	    android:layout_row="3"
	    android:text="@string/CallEmergencyContactButton"
	    android:textColor="#000000"
	    android:textSize="@dimen/activity_content" 
	    />
	<Button
	    android:id="@+id/EditEmergencyContact"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_column="0"
	    android:layout_columnSpan="3"
	    android:layout_gravity="center_horizontal|top"
	    android:layout_row="3"
	    android:text="@string/EditEmergencyContactButton"
	    android:textColor="#000000"
	    android:textSize="@dimen/activity_content" 
	    />
</GridLayout>