<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.rocketmail.dsmacy.emergencycall.EditContactActivity" 
    android:columnCount="3"
    android:rowCount="4"
    >

	<!-- TITLE -->
	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textColor="#000000"
		android:layout_row="0"
		android:layout_column="0"
		android:layout_columnSpan="3"
		android:textSize="@dimen/activity_title"
		android:id="@+id/EditContactTitle"
		android:text="@string/EditContactTitle"
		/>
	
	<!-- NAME COLUMN -->
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textColor="#000000"
		android:layout_row="1"
		android:layout_column="0"
		android:layout_columnSpan="1"
		android:textSize="@dimen/activity_content"
		android:id="@+id/EditContactNameTag"
		android:text="@string/NameTag"
		/>
	<EditText
	    android:id="@+id/EditContactName"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_column="1"
	    android:layout_columnSpan="2"
	    android:layout_row="1"
	    android:text="@string/NameTag"
	    android:textColor="#000000"
	    android:textSize="@dimen/activity_content" 
	    />
	
	<!-- NUMBER COLUMN -->
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textColor="#000000"
		android:layout_row="2"
		android:layout_column="0"
		android:layout_columnSpan="1"
		android:textSize="@dimen/activity_content"
		android:id="@+id/VEditContactNumberTag"
		android:text="@string/NumberTag"
		/>
	<EditText
	    android:id="@+id/EditContactNumber"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_column="1"
	    android:layout_columnSpan="2"
	    android:layout_row="2"
	    android:text="@string/NumberTag"
	    android:textColor="#000000"
	    android:textSize="@dimen/activity_content" 
	    />

	<!-- BUTTONS -->
	<Button
	    android:id="@+id/SaveContact"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_column="0"
	    android:layout_columnSpan="3"
	    android:layout_gravity="center_horizontal|top"
	    android:layout_row="3"
	    android:text="@string/SaveButton"
	    android:textColor="#000000"
	    android:textSize="@dimen/activity_content" 
	    />

</GridLayout>
